// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentEditor should render 1`] = `
<div>
  <Box
    border="400"
  >
    <Tabs
      selected={0}
      tabs={
        Array [
          Object {
            "content": "HTML",
            "onClick": [Function],
          },
          Object {
            "content": "Text",
            "onClick": [Function],
          },
          Object {
            "content": "AMP HTML",
            "onClick": [Function],
          },
          Object {
            "content": "Test Data",
            "onClick": [Function],
          },
        ]
      }
    />
    <Panel>
      <Field
        component={[Function]}
        mode="html"
        name="content.html"
        normalize={[Function]}
        syntaxValidation={false}
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
      />
    </Panel>
  </Box>
</div>
`;

exports[`ContentEditor should render without test data tab 1`] = `
<div>
  <Box
    border="400"
  >
    <Tabs
      selected={0}
      tabs={
        Array [
          Object {
            "content": "HTML",
            "onClick": [Function],
          },
          Object {
            "content": "Text",
            "onClick": [Function],
          },
          Object {
            "content": "AMP HTML",
            "onClick": [Function],
          },
        ]
      }
    />
    <Panel>
      <Field
        component={[Function]}
        mode="html"
        name="content.html"
        normalize={[Function]}
        syntaxValidation={false}
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
      />
    </Panel>
  </Box>
</div>
`;
